UI: Add padding on mobile to prevent logo overlap

--- a/app/prices/prices.module.css
+++ b/app/prices/prices.module.css
@@ -297,4 +297,9 @@
         right: 20px;
         left: auto;
     }
+
+    .itemContent {
+        padding-bottom: 72px;
+        /* Prevent description description overlap with logo */
+    }
 }
